Fix tab item icons being truncated

--- a/src/components/TabView.css
+++ b/src/components/TabView.css
@@ -64,10 +64,8 @@
 	height: 36px;
 	display: flex;
 	flex-direction: column;
-}
-
-.tab-view-item-icon svg {
-	margin: 0 auto;
+	border-radius: 99px;
+	background: var(--code-bg-color);
 }
 
 .tab-view-item-icon svg,
@@ -75,15 +73,18 @@
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	border-radius: 99px;
 	flex: 1;
 }
 
 .tab-view-item-icon svg {
-	background: var(--code-bg-color);
+	margin: 0 auto;
 	color: var(--icon-color);
 	padding: 8px;
 	box-sizing: border-box;
+}
+
+.tab-view-item-icon img {
+	border-radius: 99px;
 }
 
 .tab-view-item-content {
